--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<div id = 'buttons'>
 		<button type="button" onclick="window.location.href = 'reserve1.html';">Reserve a room</button>
 		<button type="button" onclick="window.location.href = 'view1.html';">View rooms</button>
+		<button type="button" onclick="window.location.href = 'contactInfo.html';">Enter Contact Info</button>
+		<button type="button" onclick="window.location.href = 'officeInfo.html';">Office Contact Info</button>
 	</div>
 </div>
 </body>
