--- a/viewReserve2.html
+++ b/viewReserve2.html
@@ -11,7 +11,6 @@
 	</div>
 	<div class="navbar">
 		<a href="index.html">Home</a>
-		<a href="officeInfo.html" id = 'active'>Contact Us</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
@@ -22,12 +21,21 @@
 				<a href="contactInfo.html">Your contact info</a>
 			</div>
 		</div>
+		<div class="dropdown">
+			<button class="dropbtn">Administration
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="viewReserve1.html">View Reservation</a>
+				<a href="reserve1.html">Edit Reservation</a>
+			</div>
+		</div>
 	</div>
-	<h1>Contact Information Complete</h1>
-	<h2>John Smith's contact information has been submitted.</h2>
-	<div id = 'home'>
-	<br><button type="button" onclick="window.location.href = 'index.html';">Home</button>
-	</div>
+	<h2>Reservation information</h2>
+	<h3>Customer Name: John Smith</h3>
+	<h3>Room: 101</h3>
+	<h3>Date: Monay, 10/7/19</h3>
+	<h3>Payment Status: Paid</h3>
 </div>
 </body>
 </html>
