--- a/officeInfo.html
+++ b/officeInfo.html
@@ -2,15 +2,30 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="navbar.css">
 </head>
 <body>
 <div id = 'main'>
-	<h1>Office Contact Information</h1>
-	<h2>Email: Contact@reservation.com</h2>
-	<h2>Phone: (765)555-1234</h2>
-	<div id = 'home'>
-	<br><button type="button" onclick="window.location.href = 'index.html';">Home</button>
+	<div class = "title">
+		<h1>Convention Center</h1>
 	</div>
+	<div class="navbar">
+		<a href="index.html">Home</a>
+		<a href="officeInfo.html" id = 'active'>Contact Us</a>
+		<div class="dropdown">
+			<button class="dropbtn">Reserve
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="view1.html">View Rooms</a>
+				<a href="reserve1.html">Reserve a Room</a>
+				<a href="contactInfo.html">Your contact info</a>
+			</div>
+		</div>
+	</div>
+	<h2>Contact Us!</h2>
+	<h3>Email: Contact@reservation.com</h3>
+	<h3>Phone: (765)555-1234</h3>
 </div>
 </body>
 </html>
