--- a/reserve2.html
+++ b/reserve2.html
@@ -3,11 +3,29 @@
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" type="text/css" href="reserve2.css">
+<link rel="stylesheet" type="text/css" href="navbar.css">
 </head>
 <body>
 <div id = 'main'>
-	<h1> Select a day to reserve</h1>
-	<h2>Room 101 - Occupancy: 30</h2>
+	<div class = "title">
+		<h1>Convention Center</h1>
+	</div>
+	<div class="navbar">
+		<a href="index.html">Home</a>
+		<a href="officeInfo.html" id = 'active'>Contact Us</a>
+		<div class="dropdown">
+			<button class="dropbtn">Reserve
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="view1.html">View Rooms</a>
+				<a href="reserve1.html">Reserve a Room</a>
+				<a href="contactInfo.html">Your contact info</a>
+			</div>
+		</div>
+	</div>
+	<h2> Select a day to reserve</h2>
+	<h3>Room 101 - Occupancy: 30</h3>
 	<h3>10/6/2019 - 10/12/2019</h3>
 	<form action = "">
 		<select name = "date">
