--- a/reserveComplete.html
+++ b/reserveComplete.html
@@ -2,14 +2,29 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="navbar.css">
 </head>
 <body>
 <div id = 'main'>
+	<div class = "title">
+		<h1>Convention Center</h1>
+	</div>
+	<div class="navbar">
+		<a href="index.html">Home</a>
+		<a href="officeInfo.html" id = 'active'>Contact Us</a>
+		<div class="dropdown">
+			<button class="dropbtn">Reserve
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="view1.html">View Rooms</a>
+				<a href="reserve1.html">Reserve a Room</a>
+				<a href="contactInfo.html">Your contact info</a>
+			</div>
+		</div>
+	</div>
 	<h1>Reservation Complete</h1>
 	<h2>John Smith's reservation of room 101 on Monday, 10/7/2019 is complete.</h2>
-	<div id = 'home'>
-	<br><button type="button" onclick="window.location.href = 'index.html';">Home</button>
-	</div>
 </div>
 </body>
 </html>
