--- a/view1.html
+++ b/view1.html
@@ -2,13 +2,30 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="navbar.css">
 </head>
 <body>
 <div id = 'main'>
-	<h1> Select a room to check days</h1>
+	<div class = "title">
+		<h1>Convention Center</h1>
+	</div>
+	<div class="navbar">
+		<a href="index.html">Home</a>
+		<a href="officeInfo.html" id = 'active'>Contact Us</a>
+		<div class="dropdown">
+			<button class="dropbtn">Reserve
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="view1.html">View Rooms</a>
+				<a href="reserve1.html">Reserve a Room</a>
+				<a href="contactInfo.html">Your contact info</a>
+			</div>
+		</div>
+	</div>
+	<h2> Select a room to check days</h2>
 	<div id = 'roomSelect'>
 	<form action="">
-		<button type="button" onclick="window.location.href = 'index.html';">Home</button><br>
 		<input type="radio" name="room" value="101">Room 101 - Occupancy: 30<br>
 		<input type="radio" name="room" value="102">Room 102 - Occupancy: 60<br>
 		<input type="radio" name="room" value="103">Room 103 - Occupancy: 30<br>
