--- a/view2.html
+++ b/view2.html
@@ -3,14 +3,30 @@
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" type="text/css" href="reserve2.css">
+<link rel="stylesheet" type="text/css" href="navbar.css">
 </head>
 <body>
 <div id = 'main'>
-	<h1>Room availability</h1>
-	<h1>Room 101 - Occupancy: 30</h1>
-	<h2>10/6/2019 - 10/12/2019</h2>
-	<button type="button" onclick="window.location.href = 'view1.html';">Back</button>
-	<button type="button" onclick="window.location.href = 'index.html';">Home</button>
+	<div class = "title">
+		<h1>Convention Center</h1>
+	</div>
+	<div class="navbar">
+		<a href="index.html">Home</a>
+		<a href="officeInfo.html" id = 'active'>Contact Us</a>
+		<div class="dropdown">
+			<button class="dropbtn">Reserve
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="view1.html">View Rooms</a>
+				<a href="reserve1.html">Reserve a Room</a>
+				<a href="contactInfo.html">Your contact info</a>
+			</div>
+		</div>
+	</div>
+	<h2>Room availability</h2>
+	<h2>Room 101 - Occupancy: 30</h2>
+	<h3>10/6/2019 - 10/12/2019</h3>
 	<table style = "width:100%">
 		<tr>
 			<th>Sunday</th>
@@ -31,6 +47,7 @@
 			<td style = "background-color: green">OPEN</td>
 		</tr>
 	</table>
+	<button type="button" onclick="window.location.href = 'view1.html';">Back</button>
 </div>
 </body>
 </html>
