--- a/reserve1.html
+++ b/reserve1.html
@@ -11,7 +11,7 @@
 	</div>
 	<div class="navbar">
 		<a href="index.html">Home</a>
-		<a href="officeInfo.html" id = 'active'>Contact Us</a>
+		<a href="officeInfo.html">Contact Us</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
