--- a/cancelReserve1.html
+++ b/cancelReserve1.html
@@ -32,17 +32,12 @@
 			</div>
 		</div>
 	</div>
-	<h2>Input contact information</h2>
-	<div id = 'custInfo'>
-	<form>
-		First Name:<br>
-		<input type="text" name="firstName"><br>
-		Last Name:<br>
-		<input type="text" name="lastName"><br>
-	</form>
-	<br>
-	<button type="button" onclick="window.location.href = 'viewReserve2.html';">Submit</button>
-	<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
+	<h1>Reservation Change Complete</h1>
+	<h2>Cancel John Smith's Reservation for Room 101 on 11/15/19?</h2>
+	<div id = 'home'>
+	<br><button type="button" onclick="window.location.href = 'cancelReserveComplete.html';">Yes</button>
+	<br><button type="button" onclick="window.location.href = 'cancelReserveIncomplete.html';">No</button>
+	</div>
 </div>
 </body>
 </html>
