--- a/cancelReserveIncomplete.html
+++ b/cancelReserveIncomplete.html
@@ -32,17 +32,9 @@
 			</div>
 		</div>
 	</div>
-	<h2>Input contact information</h2>
-	<div id = 'custInfo'>
-	<form>
-		First Name:<br>
-		<input type="text" name="firstName"><br>
-		Last Name:<br>
-		<input type="text" name="lastName"><br>
-	</form>
-	<br>
-	<button type="button" onclick="window.location.href = 'viewReserve2.html';">Submit</button>
-	<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
+	<h1>Reservation Change Complete</h1>
+	<h2>No reservation was cancelled.</h2>
+	</div>
 </div>
 </body>
 </html>
