--- a/changeReserve1.html
+++ b/changeReserve1.html
@@ -41,7 +41,7 @@
 		<input type="text" name="lastName"><br>
 	</form>
 	<br>
-	<button type="button" onclick="window.location.href = 'viewReserve2.html';">Submit</button>
+	<button type="button" onclick="window.location.href = 'changeReserve2.html';">Submit</button>
 	<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
 </div>
 </body>
