--- a/changeReserve3.html
+++ b/changeReserve3.html
@@ -32,17 +32,15 @@
 			</div>
 		</div>
 	</div>
-	<h2>Input contact information</h2>
-	<div id = 'custInfo'>
-	<form>
-		First Name:<br>
-		<input type="text" name="firstName"><br>
-		Last Name:<br>
-		<input type="text" name="lastName"><br>
-	</form>
-	<br>
-	<button type="button" onclick="window.location.href = 'viewReserve2.html';">Submit</button>
-	<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
+	<h2>Change Reservation</h2>
+	<h3>John Smith - Room 101 - 11/15/19</h3>
+	<div id = "reservations">
+		<button type="button" onclick="window.location.href = 'changeRoom1.html';">Change Rooms</button>
+		<br>
+		<button type="button" onclick="window.location.href = 'changeDate1.html';">Change Date</button>
+		<br>
+		<button type="button" onclick="window.location.href = 'Index.html';">Cancel</button>
+	</div>
 </div>
 </body>
 </html>
