--- a/staffHome.html
+++ b/staffHome.html
@@ -29,7 +29,7 @@
 			</button>
 			<div class="dropdown-content">
 				<a href="viewReserve1.html">View Reservation</a>
-				<a href="reserve1.html">Edit Reservation</a>
+				<a href="changeReserve1.html">Edit Reservation</a>
 			</div>
 		</div>
 	</div>
