--- a/changeDate1.html
+++ b/changeDate1.html
@@ -12,8 +12,7 @@
 		<h1>Convention Center</h1>
 	</div>
 	<div class="navbar">
-		<a href="index.html">Home</a>
-		<a href="officeInfo.html">Contact Us</a>
+		<a href="index.html" id = 'active'>Home</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
@@ -21,13 +20,35 @@
 			<div class="dropdown-content">
 				<a href="view1.html">View Rooms</a>
 				<a href="reserve1.html">Reserve a Room</a>
-				<a href="contactInfo.html">Your contact info</a>
+				<a href="contactInfo.html">Enter contact info</a>
+			</div>
+		</div>
+		<div class="dropdown">
+			<button class="dropbtn">Administration
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="viewReserve1.html">View Reservation</a>
+				<a href="changeReserve1.html">Edit Reservation</a>
 			</div>
 		</div>
 	</div>
-	<h2>Room availability</h2>
-	<h2>Room 101 - Occupancy: 30</h2>
-	<h3>10/6/2019 - 10/12/2019</h3>
+	<h2> Select a day to reserve</h2>
+	<h3>Room 101 - Occupancy: 30</h3>
+	<h3>11/10/2019 - 11/16/2019</h3>
+	<form action = "">
+		<select name = "date">
+			<option value="Sunday">Sunday</option>
+			<option value="Monday">Monday</option>
+			<option value="Tuesday">Tuesday</option>
+			<option value="Wednesday">Wednesday</option>
+			<option value="Thursday">Thursday</option>
+			<option value="Friday">Friday</option>
+			<option value="Saturday">Saturday</option>
+		</select>
+		<button type="button" onclick="window.location.href = 'changeDateComplete.html';">Select Day</button>
+		<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
+	</form>	
 	<table style = "width:100%">
 		<tr>
 			<th>Sunday</th>
@@ -48,7 +69,6 @@
 			<td style = "background-color: green">OPEN</td>
 		</tr>
 	</table>
-	<button type="button" onclick="window.location.href = 'view1.html';">Back</button>
 </div>
 </body>
 </html>
