--- a/changeReserve2.html
+++ b/changeReserve2.html
@@ -32,17 +32,16 @@
 			</div>
 		</div>
 	</div>
-	<h2>Input contact information</h2>
-	<div id = 'custInfo'>
-	<form>
-		First Name:<br>
-		<input type="text" name="firstName"><br>
-		Last Name:<br>
-		<input type="text" name="lastName"><br>
-	</form>
-	<br>
-	<button type="button" onclick="window.location.href = 'viewReserve2.html';">Submit</button>
-	<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
+	<h2>Change Reservation</h2>
+	<h3>Reservations for John Smith</h3>
+	<div id = "reservations">
+	<p>11/15/19 - Room 101</p>
+	<button type="button" onclick="window.location.href = 'changeReserve3.html';">Change Reservation</button>
+	<button type="button" onclick="window.location.href = 'cancelReserve1.html';">Cancel Reservation</button>
+	<p>11/30/19 - Room 102</p>
+	<button type="button" onclick="window.location.href = 'changeReserve3.html';">Change Reservation</button>
+	<button type="button" onclick="window.location.href = 'cancelReserve1.html';">Cancel Reservation</button>
+	</div>
 </div>
 </body>
 </html>
