--- a/changeRoom1.html
+++ b/changeRoom1.html
@@ -32,17 +32,16 @@
 			</div>
 		</div>
 	</div>
-	<h2>Input contact information</h2>
-	<div id = 'custInfo'>
-	<form>
-		First Name:<br>
-		<input type="text" name="firstName"><br>
-		Last Name:<br>
-		<input type="text" name="lastName"><br>
+	<h2> Select a room to reserve</h2>
+	<div id = 'roomSelect'>
+	<form action="">
+		<input type="radio" name="room" value="101">Room 101 - Occupancy: 30<br>
+		<input type="radio" name="room" value="102">Room 102 - Occupancy: 60<br>
+		<input type="radio" name="room" value="103">Room 103 - Occupancy: 30<br>
+		<button type="button" onclick="window.location.href = 'changeRoom2.html';">Select room</button>
+		<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
 	</form>
-	<br>
-	<button type="button" onclick="window.location.href = 'viewReserve2.html';">Submit</button>
-	<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
+	</div>
 </div>
 </body>
 </html>
