--- a/changeRoom2.html
+++ b/changeRoom2.html
@@ -12,8 +12,7 @@
 		<h1>Convention Center</h1>
 	</div>
 	<div class="navbar">
-		<a href="index.html">Home</a>
-		<a href="officeInfo.html">Contact Us</a>
+		<a href="index.html" id = 'active'>Home</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
@@ -21,13 +20,22 @@
 			<div class="dropdown-content">
 				<a href="view1.html">View Rooms</a>
 				<a href="reserve1.html">Reserve a Room</a>
-				<a href="contactInfo.html">Your contact info</a>
+				<a href="contactInfo.html">Enter contact info</a>
+			</div>
+		</div>
+		<div class="dropdown">
+			<button class="dropbtn">Administration
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="viewReserve1.html">View Reservation</a>
+				<a href="changeReserve1.html">Edit Reservation</a>
 			</div>
 		</div>
 	</div>
 	<h2> Select a day to reserve</h2>
-	<h3>Room 101 - Occupancy: 30</h3>
-	<h3>10/6/2019 - 10/12/2019</h3>
+	<h3>Room 102 - Occupancy: 60</h3>
+	<h3>11/10/2019 - 11/16/2019</h3>
 	<form action = "">
 		<select name = "date">
 			<option value="Sunday">Sunday</option>
@@ -38,8 +46,8 @@
 			<option value="Friday">Friday</option>
 			<option value="Saturday">Saturday</option>
 		</select>
-		<button type="button" onclick="window.location.href = 'reserve3.html';">Select Day</button>
-		<button type="button" onclick="window.location.href = 'reserve1.html';">Back</button>
+		<button type="button" onclick="window.location.href = 'changeRoomComplete.html';">Select Day</button>
+		<button type="button" onclick="window.location.href = 'changeRoom1.html';">Back</button>
 		<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
 	</form>	
 	<table style = "width:100%">
@@ -54,11 +62,11 @@
 		</tr>
 		<tr>
 			<td style = "background-color: green">OPEN</td>
-			<td style = "background-color: green">OPEN</td>
+			<td style = "background-color: red">RESERVED</td>
 			<td style = "background-color: red">RESERVED</td>
 			<td style = "background-color: green">OPEN</td>
 			<td style = "background-color: green">OPEN</td>
-			<td style = "background-color: green">OPEN</td>
+			<td style = "background-color: red">RESERVED</td>
 			<td style = "background-color: green">OPEN</td>
 		</tr>
 	</table>
