--- a/changeRoomComplete.html
+++ b/changeRoomComplete.html
@@ -32,17 +32,8 @@
 			</div>
 		</div>
 	</div>
-	<h2>Input contact information</h2>
-	<div id = 'custInfo'>
-	<form>
-		First Name:<br>
-		<input type="text" name="firstName"><br>
-		Last Name:<br>
-		<input type="text" name="lastName"><br>
-	</form>
-	<br>
-	<button type="button" onclick="window.location.href = 'viewReserve2.html';">Submit</button>
-	<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
+	<h1>Reservation Change Complete</h1>
+	<h2>John Smith's reservation date has been changed to Room 102 on 11/16/2019.</h2>
 </div>
 </body>
 </html>
