--- a/contactInfoComplete.html
+++ b/contactInfoComplete.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" type="text/css" href="navbar.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div id = 'main'>
@@ -25,9 +26,6 @@
 	</div>
 	<h1>Contact Information Complete</h1>
 	<h2>John Smith's contact information has been submitted.</h2>
-	<div id = 'home'>
-	<br><button type="button" onclick="window.location.href = 'index.html';">Home</button>
-	</div>
 </div>
 </body>
 </html>
