--- a/viewReserve2.html
+++ b/viewReserve2.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" type="text/css" href="navbar.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div id = 'main'>
@@ -10,7 +11,7 @@
 		<h1>Convention Center</h1>
 	</div>
 	<div class="navbar">
-		<a href="index.html">Home</a>
+		<a href="index.html" id = 'active'>Home</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
@@ -18,7 +19,7 @@
 			<div class="dropdown-content">
 				<a href="view1.html">View Rooms</a>
 				<a href="reserve1.html">Reserve a Room</a>
-				<a href="contactInfo.html">Your contact info</a>
+				<a href="contactInfo.html">Enter contact info</a>
 			</div>
 		</div>
 		<div class="dropdown">
@@ -27,7 +28,7 @@
 			</button>
 			<div class="dropdown-content">
 				<a href="viewReserve1.html">View Reservation</a>
-				<a href="reserve1.html">Edit Reservation</a>
+				<a href="changeReserve1.html">Edit Reservation</a>
 			</div>
 		</div>
 	</div>
