--- a/viewReserve1.html
+++ b/viewReserve1.html
@@ -39,6 +39,8 @@
 		<input type="text" name="firstName"><br>
 		Last Name:<br>
 		<input type="text" name="lastName"><br>
+		Date:<br>
+		<input type="text" name="lastName"><br>
 	</form>
 	<br>
 	<button type="button" onclick="window.location.href = 'viewReserve2.html';">Submit</button>
