--- a/viewInvalid.html
+++ b/viewInvalid.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0041)https://brewer82.github.io/staffHome.html -->
+<!-- saved from url=(0044)https://brewer82.github.io/viewReserve1.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" type="text/css" href="./staffHome_files/main.css">
-<link rel="stylesheet" type="text/css" href="./staffHome_files/navbar.css">
-<link rel="stylesheet" type="text/css" href="./staffHome_files/index.css">
-<link rel="stylesheet" href="./staffHome_files/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="./viewInvalid_files/main.css">
+<link rel="stylesheet" type="text/css" href="./viewInvalid_files/navbar.css">
+<link rel="stylesheet" href="./viewInvalid_files/font-awesome.min.css">
 </head>
 <body>
 <div id="main">
@@ -29,13 +28,23 @@
 			</button>
 			<div class="dropdown-content">
 				<a href="https://brewer82.github.io/viewReserve1.html">View Reservation</a>
-				<a href="viewInvalid.html">View Invalid Reservation</a>
 				<a href="https://brewer82.github.io/changeReserve1.html">Edit Reservation</a>
 			</div>
 		</div>
 	</div>
-	<img src="./staffHome_files/homeImage.jpg">
+	<h2>Input contact information</h2>
+	<div id="custInfo">
+	<form>
+		First Name:<br>
+		<input type="text" name="firstName"><br>
+		Last Name:<br>
+		<input type="text" name="lastName"><br>
+		Date:<br>
+		<input type="text" name="lastName"><br>
+	</form>
+	<br>
+	<button type="button" onclick="window.location.href = &#39;invalidMenu.html&#39;;">Submit</button>
+	<button type="button" onclick="window.location.href = &#39;index.html&#39;;">Cancel</button>
 </div>
 
-
-</body></html>
+</div></body></html>
