--- a/cancelledreservation2.html
+++ b/cancelledreservation2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!-- saved from url=(0044)https://brewer82.github.io/customerHome.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" type="text/css" href="./customerHome_files/main.css">
-<link rel="stylesheet" type="text/css" href="./customerHome_files/navbar.css">
-<link rel="stylesheet" type="text/css" href="./customerHome_files/index.css">
+<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="navbar.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 <link rel="stylesheet" href="./customerHome_files/font-awesome.min.css">
 </head>
 <body>
