--- a/viewInvalid.html
+++ b/viewInvalid.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0044)https://brewer82.github.io/viewReserve1.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" type="text/css" href="./viewInvalid_files/main.css">
-<link rel="stylesheet" type="text/css" href="./viewInvalid_files/navbar.css">
+<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="navbar.css">
 <link rel="stylesheet" href="./viewInvalid_files/font-awesome.min.css">
 </head>
 <body>
