--- a/customerHome.html
+++ b/customerHome.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" type="text/css" href="navbar.css">
 <link rel="stylesheet" type="text/css" href="index.css">
-<link rel="stylesheet" href="./customerHome_files/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div id="main">
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 	</div>
-	<img src="./customerHome_files/homeImage.jpg">
+	<img src="homeImage.jpg">
 <!--	<div id = 'buttons'>
 		<button type="button" onclick="window.location.href = 'reserve1.html';">Reserve a room</button>
 		<button type="button" onclick="window.location.href = 'view1.html';">View rooms</button>
