--- a/signeddocument.html
+++ b/signeddocument.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" type="text/css" href="navbar.css">
 <link rel="stylesheet" type="text/css" href="index.css">
-<link rel="stylesheet" href="./customerHome_files/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 table, th, td {
   border: 1px solid black;
