--- a/viewInvalid.html
+++ b/viewInvalid.html
@@ -43,8 +43,8 @@
 		<input type="text" name="lastName"><br>
 	</form>
 	<br>
-	<button type="button" onclick="window.location.href = "https://brewer82.github.io/invalidMenu.html">Submit</button>
-	<button type="button" onclick="window.location.href = "https://brewer82.github.io/index.html">Cancel</button>
+	<button type="button" onclick="window.location.href = "invalidMenu.html">Submit</button>
+	<button type="button" onclick="window.location.href = "index.html">Cancel</button>
 </div>
 
 </div></body></html>
