--- a/invalidMenu.html
+++ b/invalidMenu.html
@@ -22,15 +22,15 @@ th, td {
 		<h1>Convention Center</h1>
 	</div>
 	<div class="navbar">
-		<a href="https://brewer82.github.io/index.html" id="active">Home</a>
+		<a href="index.html">Home</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
 			</button>
 			<div class="dropdown-content">
-				<a href="https://brewer82.github.io/view1.html">View Rooms</a>
-				<a href="https://brewer82.github.io/reserve1.html">Reserve a Room</a>
-				<a href="https://brewer82.github.io/contactInfo.html">Enter contact info</a>
+				<a href="view1.html">View Rooms</a>
+				<a href="reserve1.html">Reserve a Room</a>
+				<a href="contactInfo.html">Enter contact info</a>
 			</div>
 		</div>
 		<div class="dropdown">
@@ -38,9 +38,9 @@ th, td {
 				<i class="fa fa-caret-down"></i>
 			</button>
 			<div class="dropdown-content">
-				<a href="https://brewer82.github.io/viewReserve1.html">View Reservation</a>
+				<a href="viewReserve1.html">View Reservation</a>
 				<a href="viewInvalid.html">View Invalid Reservation</a>
-				<a href="https://brewer82.github.io/changeReserve1.html">Edit Reservation</a>
+				<a href="changeReserve1.html">Edit Reservation</a>
 			</div>
 		</div>
 	</div>
