--- a/cancelReserve1.html
+++ b/cancelReserve1.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <div id = 'main'>
-	<div class = "title">
+	<div class="title">
 		<h1>Convention Center</h1>
 	</div>
 	<div class="navbar">
-		<a href="index.html" id = 'active'>Home</a>
+		<a href="index.html">Home</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
@@ -28,6 +28,7 @@
 			</button>
 			<div class="dropdown-content">
 				<a href="viewReserve1.html">View Reservation</a>
+				<a href="viewInvalid.html">View Invalid Reservation</a>
 				<a href="changeReserve1.html">Edit Reservation</a>
 			</div>
 		</div>
