--- a/contactInfo.html
+++ b/contactInfo.html
@@ -7,12 +7,11 @@
 </head>
 <body>
 <div id = 'main'>
-	<div class = "title">
+	<div class="title">
 		<h1>Convention Center</h1>
 	</div>
 	<div class="navbar">
 		<a href="index.html">Home</a>
-		<a href="officeInfo.html" id = 'active'>Contact Us</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
@@ -20,7 +19,17 @@
 			<div class="dropdown-content">
 				<a href="view1.html">View Rooms</a>
 				<a href="reserve1.html">Reserve a Room</a>
-				<a href="contactInfo.html">Your contact info</a>
+				<a href="contactInfo.html">Enter contact info</a>
+			</div>
+		</div>
+		<div class="dropdown">
+			<button class="dropbtn">Administration
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="viewReserve1.html">View Reservation</a>
+				<a href="viewInvalid.html">View Invalid Reservation</a>
+				<a href="changeReserve1.html">Edit Reservation</a>
 			</div>
 		</div>
 	</div>
