--- a/contactInfoIncomplete.html
+++ b/contactInfoIncomplete.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <div id = 'main'>
-	<div class = "title">
+	<div class="title">
 		<h1>Convention Center</h1>
 	</div>
 	<div class="navbar">
 		<a href="index.html">Home</a>
-		<a href="officeInfo.html" id = 'active'>Contact Us</a>
+		<a href="officeInfo.html">Contact Us</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
@@ -22,6 +22,7 @@
 				<a href="view1.html">View Rooms</a>
 				<a href="reserve1.html">Reserve a Room</a>
 				<a href="contactInfo.html">Your contact info</a>
+				<a href="signeddocument.html">See Signed Agreement</a>
 			</div>
 		</div>
 	</div>
