--- a/customerHome.html
+++ b/customerHome.html
@@ -12,16 +12,16 @@
 		<h1>Convention Center</h1>
 	</div>
 	<div class="navbar">
-		<a href="https://brewer82.github.io/index.html" id="active">Home</a>
-		<a href="https://brewer82.github.io/officeInfo.html">Contact Us</a>
+		<a href="index.html" id="active">Home</a>
+		<a href="officeInfo.html">Contact Us</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
 			</button>
 			<div class="dropdown-content">
-				<a href="https://brewer82.github.io/view1.html">View Rooms</a>
-				<a href="https://brewer82.github.io/reserve1.html">Reserve a Room</a>
-				<a href="https://brewer82.github.io/contactInfo.html">Your contact info</a>
+				<a href="view1.html">View Rooms</a>
+				<a href="reserve1.html">Reserve a Room</a>
+				<a href="contactInfo.html">Your contact info</a>
 				<a href="signeddocument.html">See Signed Agreement</a>
 			</div>
 		</div>
