--- a/view2.html
+++ b/view2.html
@@ -22,6 +22,7 @@
 				<a href="view1.html">View Rooms</a>
 				<a href="reserve1.html">Reserve a Room</a>
 				<a href="contactInfo.html">Your contact info</a>
+				<a href="signeddocument.html">See Signed Agreement</a>
 			</div>
 		</div>
 	</div>
