--- a/viewInvalid.html
+++ b/viewInvalid.html
@@ -11,15 +11,15 @@
 		<h1>Convention Center</h1>
 	</div>
 	<div class="navbar">
-		<a href="https://brewer82.github.io/index.html" id="active">Home</a>
+		<a href="index.html">Home</a>
 		<div class="dropdown">
 			<button class="dropbtn">Reserve
 				<i class="fa fa-caret-down"></i>
 			</button>
 			<div class="dropdown-content">
-				<a href="https://brewer82.github.io/view1.html">View Rooms</a>
-				<a href="https://brewer82.github.io/reserve1.html">Reserve a Room</a>
-				<a href="https://brewer82.github.io/contactInfo.html">Enter contact info</a>
+				<a href="view1.html">View Rooms</a>
+				<a href="reserve1.html">Reserve a Room</a>
+				<a href="contactInfo.html">Enter contact info</a>
 			</div>
 		</div>
 		<div class="dropdown">
@@ -27,8 +27,9 @@
 				<i class="fa fa-caret-down"></i>
 			</button>
 			<div class="dropdown-content">
-				<a href="https://brewer82.github.io/viewReserve1.html">View Reservation</a>
-				<a href="https://brewer82.github.io/changeReserve1.html">Edit Reservation</a>
+				<a href="viewReserve1.html">View Reservation</a>
+				<a href="viewInvalid.html">View Invalid Reservation</a>
+				<a href="changeReserve1.html">Edit Reservation</a>
 			</div>
 		</div>
 	</div>
@@ -43,8 +44,8 @@
 		<input type="text" name="lastName"><br>
 	</form>
 	<br>
-	<button type="button" onclick="window.location.href = "invalidMenu.html">Submit</button>
-	<button type="button" onclick="window.location.href = "index.html">Cancel</button>
+	<button type="button" onclick="window.location.href = 'invalidMenu.html';">Submit</button>
+	<button type="button" onclick="window.location.href = 'index.html';">Cancel</button>
 </div>
 
 </div></body></html>
