--- a/staffHome.html
+++ b/staffHome.html
@@ -33,6 +33,7 @@
 				<a href="changeReserve1.html">Edit Reservation</a>
 			</div>
 		</div>
+		<a href="viewReport1.html">Reports</a>
 	</div>
 	<img src="homeImage.jpg">
 </div>
