--- a/report2.html
+++ b/report2.html
@@ -14,6 +14,10 @@ th, td {
   padding: 15px;
   background-color: lightgrey;
 }
+#main{
+  height: 70vh;
+  padding-bottom: 1vh;
+}
 </style>
 </head>
 <body>
