--- a/viewReport1.html
+++ b/viewReport1.html
@@ -52,14 +52,9 @@ th, td {
     <th>Date End</th>
   </tr>
   <tr>
-    <td><a href="report1.html">Report_111519</a></td>
-    <td>9th November, 2019</td>
-    <td>15th November, 2019</td>
-  </tr>
-  <tr>
-    <td><a href="report2.html">Report_112219</a></td>
-    <td>16th November, 2019</td>
-    <td>22nd November, 2019</td>
+    <td><a href="report1.html">Report_Nov19</a></td>
+    <td>1th November, 2019</td>
+    <td>30th November, 2019</td>
   </tr>
 </table>
 
