--- a/report1.html
+++ b/report1.html
@@ -14,6 +14,9 @@ th, td {
   padding: 15px;
   background-color: lightgrey;
 }
+iframe{
+  margin-left: 5%;
+}
 </style>
 </head>
 <body>
@@ -46,6 +49,8 @@ th, td {
 		<a href="viewReport1.html">Reports</a>
 	</div>
 	<h2>Report_111519: 11/9/2019 - 11/15/2019</h2>
+	<iframe src="Report_Nov19.pdf" width="90%" height="700px">
+    </iframe>
 </div>
 </body>
 </html>
